--- a/РОСПИСЬ/Uslugi.html
+++ b/РОСПИСЬ/Uslugi.html
@@ -23,14 +23,14 @@
 
 <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="main.html"><img src="logo1.png" alt="Logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="logo1.png" alt="Logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="main.html">Главная
+            <a class="nav-link" href="index.html">Главная
               <span class="sr-only">(current)</span>
             </a>
           </li>
