--- a/РОСПИСЬ/Zakaz.html
+++ b/РОСПИСЬ/Zakaz.html
@@ -29,7 +29,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="main.html">Главная
+            <a class="nav-link" href="index.html">Главная
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -126,7 +126,7 @@ name="answer" placeholder="">
         <ul class="list-unstyled">
           <li>
             <p>
-              <a href="main.html">Главная</a>
+              <a href="index.html">Главная</a>
             </p>
           </li>
           <li>
